# VeinScan

./: CMakeLists.txt  veinscan.cpp
cmake-files/: compiler_flags.cmake
